Resolved checkstyle error